changed padding in navbar.css to fix alignment

--- a/src/navbar.css
+++ b/src/navbar.css
@@ -20,7 +20,7 @@
 }
 
 .nav-logo {
-    padding: 40px 50px 40px 20px;
+    padding: 40px 50px 40px 15px;
     font-family: 'Poiret One';
     font-size: 25px;
     user-select: none;
@@ -39,7 +39,7 @@
 
 .nav-item{
     display: flex;
-    padding: 0px 25px 0px 15px;
+    padding: 0px 25px 0px 10px;
     font-family: Arial;
     transition: background-color 0.2s ease;
     border-radius: 7px;
